--- a/rps.html
+++ b/rps.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
-</head>
+   </head>
 <body>
+    <h1>"Welcome to rock, paper, scissors!"</h1>
     
+    <div class="Container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+      </div>
+
+      <div id="results">
+          <p></p>
+      </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
