--- a/rps.html
+++ b/rps.html
@@ -19,6 +19,6 @@
           <p></p>
       </div>
 
-    <script src="script.js"></script>
+    <script src="/Users/eliza/Desktop/odin/practice/RPS-Project/RPS-Project/script.js"></script>
 </body>
 </html>
