Add 'new game' button that refreshes page.

--- a/rps.html
+++ b/rps.html
@@ -13,6 +13,13 @@
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
+        <button id="newgame">New Game</button>
+      </div>
+
+      <div class="running-score">
+        <span class="player-score">Your Score: </span>
+        <span class="computer-score">Computer's Score: </span>
+
       </div>
 
       <div id="results">
